test: suppress pkl native access warning